add lstm rnn detailed

--- a/get_acc_RNN.ipynb
+++ b/get_acc_RNN.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "dataset = 'detailed'\n",
-    "model = 'gru'"
+    "model = 'lstm'"
    ]
   },
   {
@@ -42,9 +42,10 @@
     "    \n",
     "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
     "    chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
-    "    n_layer = chosen_row['n_layer']\n",
-    "    h_size = chosen_row['hidden_state_size']\n",
-    "    pred_df = pd.read_csv(f'model/RNN/predictions/{dataset}_{n_layer}layers_{h_size}features_fold{test_fold}.csv')\n",
+    "    n_layer = chosen_row['num_layers']\n",
+    "    h_size = chosen_row['hidden_size']\n",
+    "    pred_df = pd.read_csv(f'model/RNN/predictions/{model}_{dataset}_{n_layer}layers_{h_size}features_fold{test_fold}.csv')\n",
+    "    pred_df.fillna(0, inplace=True)\n",
     "    acc = get_acc(eval_df, pred_df)\n",
     "    add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], [model, test_fold, acc])"
    ]
