add rnn compare figure

--- a/get_acc_RNN.ipynb
+++ b/get_acc_RNN.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'detailed'\n",
-    "model = 'lstm'"
+    "dataset = 'systematic'\n",
+    "model = 'rnn'"
    ]
   },
   {
