--- a/get_acc_RNN.ipynb
+++ b/get_acc_RNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'detailed'\n",
-    "model = 'gru'"
+    "dataset = 'systematic'\n",
+    "model = 'lstm'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for test_fold in sorted(fold_df['fold'].unique()):\n",
-    "    df_fold = cv_df[cv_df['test_fold'] == test_fold]\n",
-    "    \n",
-    "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
-    "    n_layer = chosen_row['n_layer']\n",
-    "    h_size = chosen_row['hidden_state_size']\n",
-    "    pred_df = pd.read_csv(f'model/RNN/predictions/{dataset}_{n_layer}layers_{h_size}features_fold{test_fold}.csv')\n",
-    "    acc = get_acc(eval_df, pred_df)\n",
-    "    add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], [model, test_fold, acc])"
+    "chosen_row = cv_df.loc[cv_df['val_loss'].idxmin()]\n",
+    "n_layer = chosen_row['num_layers']\n",
+    "h_size = chosen_row['hidden_size']\n",
+    "pred_df = pd.read_csv(f'model/RNN/predictions/{model}_{dataset}_{n_layer}layers_{h_size}features.csv')\n",
+    "pred_df.fillna(0, inplace=True)\n",
+    "eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == 'long']['sequenceID'])]\n",
+    "acc = get_acc(eval_df, pred_df)\n",
+    "add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'acc'], [model, acc])"
    ]
   }
  ],
@@ -66,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
