--- a/get_acc_mlp.ipynb
+++ b/get_acc_mlp.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from utility_functions import get_acc, add_row_to_csv"
    ]
   },
@@ -16,7 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'systematic'"
+    "folder_path = 'training_data'\n",
+    "datasets = [name for name in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, name))]\n",
+    "datasets.remove('detailed')\n",
+    "datasets.remove('systematic')"
    ]
   },
   {
@@ -25,28 +29,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_df = pd.read_csv(f\"model/mlp/report_{dataset}.csv\")\n",
-    "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
-    "fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for test_fold in sorted(fold_df['fold'].unique()):\n",
-    "    df_fold = cv_df[cv_df['test_fold'] == test_fold]\n",
-    "    \n",
-    "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
-    "    n_layer = chosen_row['num_layers']\n",
-    "    layer_size = chosen_row['layer_size']\n",
-    "    pred_df = pd.read_csv(f'model/mlp/predictions_all/{dataset}.{n_layer}layers_{layer_size}neurons_{test_fold}.csv')\n",
-    "    pred_df.fillna(0, inplace=True)\n",
-    "    acc = get_acc(eval_df, pred_df)\n",
-    "    add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], ['mlp', test_fold, acc])"
+    "for dataset in datasets:\n",
+    "    cv_df = pd.read_csv(f\"model/mlp/report_{dataset}.csv\")\n",
+    "    evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
+    "    fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
+    "\n",
+    "    for test_fold in sorted(fold_df['fold'].unique()):\n",
+    "        df_fold = cv_df[cv_df['test_fold'] == test_fold]\n",
+    "        \n",
+    "        eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
+    "        chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
+    "        n_layer = chosen_row['num_layers']\n",
+    "        layer_size = chosen_row['layer_size']\n",
+    "        pred_df = pd.read_csv(f'model/mlp/predictions_all/{dataset}.{n_layer}layers_{layer_size}neurons_{test_fold}.csv')\n",
+    "        pred_df.fillna(0, inplace=True)\n",
+    "        acc = get_acc(eval_df, pred_df)\n",
+    "        add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], ['mlp', test_fold, acc])"
    ]
   }
  ],
@@ -66,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
