--- a/model/linear/linear_L1reg/linear_L1reg.ipynb
+++ b/model/linear/linear_L1reg/linear_L1reg.ipynb
@@ -21,14 +21,41 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:data.table':\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# libraries\n",
     "library(penaltyLearning)\n",
     "library(data.table)\n",
     "library(future)\n",
     "library(future.apply)\n",
-    "library(directlabels)"
+    "library(directlabels)\n",
+    "library(dplyr)"
    ]
   },
   {
@@ -56,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Get the names of all folders in a specified directory\n",
-    "datasets <- list.dirs(path = \"../../../training_data\", full.names = FALSE, recursive = FALSE)"
+    "datasets <- list('cancer')"
    ]
   },
   {
@@ -86,12 +113,19 @@
     "    # combine\n",
     "    feature.dt.all <- cbind(feature.dt, folds.dt[, \"fold\"])\n",
     "    target.dt.all  <- cbind(target.dt, folds.dt[, \"fold\"])\n",
+    "    target.dt.all <- target.dt.all %>%\n",
+    "    mutate(\n",
+    "        # Adjust min.log.lambda and max.log.lambda if they are equal\n",
+    "        min.log.lambda = ifelse(min.log.lambda == max.log.lambda, min.log.lambda - 0.1, min.log.lambda),\n",
+    "        max.log.lambda = ifelse(min.log.lambda == max.log.lambda, max.log.lambda + 0.1, max.log.lambda)\n",
+    "    )\n",
     "    \n",
     "    for (test.fold in 1:n_folds) {\n",
     "        # get train and test data\n",
     "        feature.mat.train <- as.matrix(feature.dt.all[feature.dt.all$fold != test.fold, -c('sequenceID', 'fold')])\n",
     "        feature.mat.test  <- as.matrix(feature.dt.all[feature.dt.all$fold == test.fold, -c('sequenceID', 'fold')])\n",
     "        target.mat.train  <- as.matrix(target.dt.all[target.dt.all$fold != test.fold, c(\"min.log.lambda\", \"max.log.lambda\")])\n",
+    "        \n",
     "        \n",
     "        # train model\n",
     "        fit <- IntervalRegressionCV(feature.mat = feature.mat.train, target.mat = target.mat.train)\n",
@@ -120,7 +154,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.3"
+   "version": "4.4.1"
   }
  },
  "nbformat": 4,
