--- a/model/mlp/mlp.ipynb
+++ b/model/mlp/mlp.ipynb
@@ -38,9 +38,7 @@
    "outputs": [],
    "source": [
     "folder_path = '../../training_data'\n",
-    "datasets = [name for name in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, name))]\n",
-    "datasets.remove('detailed')\n",
-    "datasets.remove('systematic')\n",
+    "datasets = ['cancer']\n",
     "\n",
     "# Early stopping parameters\n",
     "patience = 100\n",
