fix cancer features

--- a/model/linear/linear_L1reg/linear_L1reg.ipynb
+++ b/model/linear/linear_L1reg/linear_L1reg.ipynb
@@ -15,39 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: 'dplyr'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:data.table':\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:stats':\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# libraries\n",
     "library(penaltyLearning)\n",
@@ -88,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -107,7 +81,7 @@
     "    \n",
     "    # filter censored intervals\n",
     "    target.dt  <- target.dt[!(min.log.lambda == -Inf & max.log.lambda == Inf)]\n",
-    "    feature.dt <- feature.dt[sequenceID %in% target.dt$sequenceID]\n",
+    "    # feature.dt <- feature.dt[sequenceID %in% target.dt$sequenceID]\n",
     "    folds.dt   <- folds.dt[sequenceID %in% target.dt$sequenceID]\n",
     "\n",
     "    # combine\n",
@@ -125,7 +99,6 @@
     "        feature.mat.train <- as.matrix(feature.dt.all[feature.dt.all$fold != test.fold, -c('sequenceID', 'fold')])\n",
     "        feature.mat.test  <- as.matrix(feature.dt.all[feature.dt.all$fold == test.fold, -c('sequenceID', 'fold')])\n",
     "        target.mat.train  <- as.matrix(target.dt.all[target.dt.all$fold != test.fold, c(\"min.log.lambda\", \"max.log.lambda\")])\n",
-    "        \n",
     "        \n",
     "        # train model\n",
     "        fit <- IntervalRegressionCV(feature.mat = feature.mat.train, target.mat = target.mat.train)\n",
