--- a/get_acc_mlp.ipynb
+++ b/get_acc_mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,38 +13,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'training_data'\n",
     "datasets = [name for name in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, name))]\n",
-    "datasets.remove('detailed')\n",
-    "datasets.remove('systematic')"
+    "datasets = ['cancer']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for dataset in datasets:\n",
-    "    cv_df = pd.read_csv(f\"model/mlp/report_{dataset}.csv\")\n",
-    "    evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
-    "    fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
+    "for test_ratio in [0.1, 0.2, 0.3, 0.4, 0.5]:\n",
+    "    for dataset in datasets:\n",
+    "        cv_df = pd.read_csv(f\"model/mlp/report_{dataset}.csv\")\n",
+    "        evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
+    "        fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
     "\n",
-    "    for test_fold in sorted(fold_df['fold'].unique()):\n",
-    "        df_fold = cv_df[cv_df['test_fold'] == test_fold]\n",
-    "        \n",
-    "        eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "        chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
-    "        n_layer = chosen_row['num_layers']\n",
-    "        layer_size = chosen_row['layer_size']\n",
-    "        pred_df = pd.read_csv(f'model/mlp/predictions_all/{dataset}.{n_layer}layers_{layer_size}neurons_{test_fold}.csv')\n",
-    "        pred_df.fillna(0, inplace=True)\n",
-    "        acc = get_acc(eval_df, pred_df)\n",
-    "        add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], ['mlp', test_fold, acc])"
+    "        for test_fold in sorted(fold_df['fold'].unique()):\n",
+    "            df_fold = cv_df[cv_df['test_fold'] == test_fold]\n",
+    "            df_fold = df_fold[df_fold['test_ratio'] == test_ratio]\n",
+    "            \n",
+    "            eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
+    "            chosen_row = df_fold.loc[df_fold['val_loss'].idxmin()]\n",
+    "            n_layer = chosen_row['num_layers']\n",
+    "            layer_size = chosen_row['layer_size']\n",
+    "            pred_df = pd.read_csv(f'model/mlp/predictions_all/{dataset}.{n_layer}layers_{layer_size}neurons_{test_fold}.csv')\n",
+    "            pred_df.fillna(0, inplace=True)\n",
+    "            acc = get_acc(eval_df, pred_df)\n",
+    "            add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', ['method', 'fold', 'acc'], [f'mlp.{test_ratio}', test_fold, acc])"
    ]
   }
  ],
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
