--- a/model/mlp/analyze.ipynb
+++ b/model/mlp/analyze.ipynb
@@ -14,7 +14,7 @@
     "for out_csv in glob(f\"reports/{dataset}/*.csv\"):\n",
     "    out_df_list.append(pd.read_csv(out_csv))\n",
     "out_df = pd.concat(out_df_list, ignore_index=False)\n",
-    "out_df.to_csv(f\"report_{dataset}.csv\", index=True)"
+    "out_df.to_csv(f\"report_{dataset}.csv\", index=False)"
    ]
   }
  ],
@@ -34,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
